
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int strlen (char*) ;
 unsigned long strtoul (char*,char**,int) ;

__attribute__((used)) static bool parse_ul(char *s, int base, unsigned long *out) {
 int length = strlen(s);
 char *endptr = ((void*)0);
 unsigned long result = strtoul(s, &endptr, base);
 if (endptr != s + length)
  return 0;
 *out = result;
 return 1;
}
